[package]
name = "mailstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
clap_derive = "4.2.0"
himalaya-lib = "0.6.0"
tokio = { version = "1.27.0", features = ["full"] }
