[package]
name = "mailstat"
version = "0.1.0"
authors = ["Andrew Lee"]
license = "Apache-2.0"
description = "A command line tool for analyzing email inbox statistics"
readme = "README.md"
homepage = "https://github.com/chairmanlee8/mailstat"
repository = "https://github.com/chairmanlee8/mailstat"
keywords = ["cli", "email"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
clap_derive = "4.2.0"
email-address-parser = "1.0.3"
env_logger = "0.10.0"
himalaya-lib = "0.6.0"
lettre = "0.10.1"
once_cell = "1.17.1"
plotters = "0.3.4"
prettytable = "0.10.0"
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
